package com.gb.rental.model.common;

import lombok.Getter;
import lombok.Setter;

@Getter
@Setter
public class Coordinates {
    private double latitude;
    private double longitude;
}
