package com.gb.rental.model.vehicle;

public class Bike extends HireableVehicle {
}
