package com.gb.rental.model.vehicle;

import lombok.Getter;
import lombok.Setter;

@Getter
@Setter
public class Van extends HireableVehicle {
}
