package com.gb.rental.model.vehicle;

public enum VehicleCategory {
    PASSENGER,
    COMMERCIAL
}
