package com.gb.rental.model.vehicle;

public enum VehicleStatus {
    AVAILALBE,
    BOOKED,
    INUSE,
    SERVICED,
    LOST,
    MISC
}
