package com.gb.rental.model.vehicle;

public enum VehicleType {
    HATCHBACK,
    SUV,
    SEDAN,
    THREEWHEELER,
    TRUCK,
    VAN,
    MOTORCYCLE,
    BICYCLE
}
